# learning-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.coolify.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/routes/: auth.py  courses.py  gamification.py  lessons.py  users.py
backend/app/core/: users.py
backend/app/models/: __init__.py  course.py  gamification.py  progress.py  user.py
backend/app/prompts/: curriculum.py
backend/app/schemas/: course.py  user.py
backend/app/services/: course_generator.py  gamification_service.py  grading.py  llm.py  seed.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/src/: index.css  main.js  main.tsx  routes.js  routes.tsx
frontend/src/api/: auth.js  auth.ts  client.js  client.ts  courses.js  courses.ts  gamification.js  gamification.ts  lessons.js  lessons.ts
frontend/src/components/exercises/: ExerciseRenderer.js  ExerciseRenderer.tsx  FillBlank.js  FillBlank.tsx  MatchPairs.js  (+10 more)
frontend/src/pages/: CoursePage.js  CoursePage.tsx  CreateCoursePage.js  CreateCoursePage.tsx  DashboardPage.js  DashboardPage.tsx  LeaderboardPage.js  LeaderboardPage.tsx  LessonPage.js  LessonPage.tsx  LoginPage.js  LoginPage.tsx  SignupPage.js  SignupPage.tsx
frontend/src/stores/: auth.js  auth.ts
frontend/src/types/: api.ts
(+10 files in other folders)
